implemented glassmorphism for project cards and adjust about section button to be in middle for smaller screen size

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -63,11 +63,13 @@ import Icon from './Icon.astro';
     }
 
     .action-container {
-        margin-left: auto;
+        text-align: center;
     }
 
-    @media (min-width: 50em) {
+    @media (min-width: 60em) {
         .action-container {
+            margin-left: auto;
+            text-align: right;
             transform: translateX(-50%);
         }
     }
