--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,19 @@
----
-import Icon from './Icon.astro';
-const currentYear = new Date().getFullYear();
----
-
 <footer>
 	<div class="group">
 		<p>
 			Designed & Developed by Daniel Ho
-			<Icon icon="rocket-launch" size="1.2em" />
 		</p>
-		<!-- <p>&copy; {currentYear} Daniel Ho</p> -->
 	</div>
 	<p class="socials">
 		<a href="https://www.linkedin.com/in/daniel-ho7/">LinkedIn</a>
 		<a href="https://github.com/Daniel-Ho986">GitHub</a>
 	</p>
 </footer>
+
 <style>
 	footer {
 		display: flex;
 		flex-direction: column;
-		gap: 3rem;
 		margin-top: auto;
 		padding: 3rem 2rem 3rem;
 		text-align: center;
@@ -28,17 +21,17 @@ const currentYear = new Date().getFullYear();
 		font-size: var(--text-sm);
 	}
 
-	/* footer a {
+	footer a {
 		color: var(--gray-400);
 		text-decoration: 1px solid underline transparent;
 		text-underline-offset: 0.25em;
 		transition: text-decoration-color var(--theme-transition);
-	} */
+	}
 
-	/* footer a:hover,
+	footer a:hover,
 	footer a:focus {
 		text-decoration-color: currentColor;
-	} */
+	}
 
 	.group {
 		display: flex;
@@ -57,7 +50,7 @@ const currentYear = new Date().getFullYear();
 		footer {
 			flex-direction: row;
 			justify-content: space-between;
-			padding: 2.5rem 5rem;
+			padding: 2rem 5rem;
 		}
 
 		.group {
