--- a/src/components/ProjectPreview.astro
+++ b/src/components/ProjectPreview.astro
@@ -48,7 +48,7 @@ const { title, description, image, code, site, techStack } = Astro.props;
 		display: grid;
 		grid-template: .5fr auto / auto;
 		height: 25rem;
-		background: var(--gradient-subtle);
+		background: var(--gradient-stroke);
 		border: 1px solid var(--gray-800);
 		border-radius: 0.75rem;
 		overflow: hidden;
@@ -73,7 +73,6 @@ const { title, description, image, code, site, techStack } = Astro.props;
 		width: 100%;
 		height: 100%;
 		padding-bottom: 1rem;
-		background: var(--gray-999);
   		color: var(--gray-200);
   		border-radius: 0.375rem;
 	}
@@ -106,7 +105,7 @@ const { title, description, image, code, site, techStack } = Astro.props;
 	.title {
   		margin: -10px 0 0 0;
   		padding: 0 2rem 0 2rem;
-  		font-size: var(--text-2xl);
+  		font-size: var(--text-xl);
 	}
 
 	.description {
