--- a/src/components/SkillCategory.astro
+++ b/src/components/SkillCategory.astro
@@ -16,37 +16,38 @@ const { title, skills } = Astro.props;
 <div>
     <h5>{title}</h5>
     <div class="images-container">
-    {skills.map(skill => (
-        <img
-            src={`../../assets/stack-icons/${skill.path}`}
-            alt={skill.alt}
-            class={`logo ${skill.modeClasses.join(' ')}`}
-        />
-    ))}
+        {skills.map(skill => (
+            <img
+                src={`../../assets/stack-icons/${skill.path}`}
+                alt={skill.alt}
+                class={`logo ${skill.modeClasses.join(' ')}`}
+            />
+        ))}
     </div>
 </div>
 
 <style>
     :global(.theme-dark) .logo.light-mode-only {
-		display: none;
-	}
+        display: none;
+    }
 
-	:global(html:not(.theme-dark)) .logo.dark-mode-only {
-		display: none;
-	}
+    :global(html:not(.theme-dark)) .logo.dark-mode-only {
+        display: none;
+    }
 
     .images-container {
-		display: flex;
-		justify-content: left;
-		gap: 1rem;
-		padding: 1rem;
-		flex-wrap: wrap;
-		max-width: 100%;
-	}
-	.logo {
-		width: 60px;
-		height: 60px;
-		object-fit: cover;
-	}
-</style>
+        display: flex;
+        justify-content: left;
+        gap: 1rem;
+        padding: 1rem;
+        flex-wrap: wrap;
+        max-width: 100%;
+    }
 
+    .logo {
+        width: 60px;
+        height: 60px;
+        object-fit: contain;
+        border-radius: 4px;
+    }
+</style>
